--- a/Project-4-menu with video background/index.html
+++ b/Project-4-menu with video background/index.html
@@ -11,22 +11,23 @@
 
 <body>
     <div class="container">
-        <video src="video.mp4" muted loop autoplay></video>
+        <video src="video.mp4" autoplay loop muted></video>
         <div class="glass">
-            <nav class="navigation">
+            <div class="navigation">
                 <div class="title"><span>.dot</span>word</div>
                 <ul>
-                    <li text="HOME" style="--c:rgb(255, 204, 0); ">Home</li>
-                    <li text="ABOUT" style="--c:rgb(111, 255, 0)">About</li>
-                    <li text="SERVICE" style="--c:rgb(254, 142, 29)">Service</li>
-                    <li text="CONTACT" style="--c:rgb(0, 255, 204)">Contact</li>
+                    <li text="HOME" style="--c:rgb(255,205,0)">Home</li>
+                    <li text="ABOUT" style="--c:rgb(111,255,0)">About</li>
+                    <li text="SERVICE" style="--c:rgb(254,142,29)">Service</li>
+                    <li text="CONTACT" style="--c:rgb(0,255,204)">Contact</li>
                 </ul>
-            </nav>
+            </div>
             <div class="intro">
                 <h2>Explore your <span>skills</span></h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, delectus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, minima.</p>
                 <button class="btn">Contact</button>
             </div>
+        
         </div>
     </div>
 </body>
