--- a/Project-5-Website With Auto Typing Text Effect/index.html
+++ b/Project-5-Website With Auto Typing Text Effect/index.html
@@ -8,37 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <nav>
-            <div class="title"><span>.</span>Auto</div>
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">portfolioll</a></li>
-                <li><a href="#">services</a></li>
-
-            </ul>
-            <img src="menu.png" class="menu-icon">
-        </nav>
-        <video src="bg.mp4" class="background" autoplay muted loop></video>
-        <div class="text-box">
-            <div class="auto-text">
-                <h1>I'm</h1>
-                <div>
-                    <span data-text="Saurabh" >Saurabh </span>
-                    <span data-text="WebDeveloper">WebDdeveloper </span>
-                    <span data-text="UIdesigner">UIdesigner </span>
-                </div>
+  <div class="header">
+    <nav>
+        <div class="title"><span>.</span>Auto</div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+        <img src="menu.png" class="menu-icon" alt="">
+    </nav>
+    <video src="bg.mp4" class="background" autoplay muted loop></video>
+    <div class="text-box">
+        <div class="auto-text">
+            <h1>I'm</h1>
+            <div>
+                <span data-text="Saurabh">Saurabh</span>
+                <span data-text="WebDeveloper">WebDeveloper</span>
+                <span data-text="UIdesigner">UIdesigner</span>
             </div>
-            <p >You can reach out to me if you need any help in making a website <br> for you or your business.</p>
-            <a href="#" class="btn btn1">Contact Me</a>
-            <a href="#" class="btn btn2">Download CV</a>
         </div>
-        <div class="image-container">
-            <img src="boy.png" alt="">
-        </div>
-        
+        <p>You can reach out to me if you need any help in making a website <br>for you or your business.</p>
+        <a href="#" class="btn btn1">Contact</a>
+        <a href="#" class="btn btn2">Download CV</a>
     </div>
-  
+    <div class="image-container">
+        <img src="boy.png" alt="">
+    </div>
+  </div>
 </body>
 </html>
