--- a/Project-6-text-transition/index.html
+++ b/Project-6-text-transition/index.html
@@ -10,28 +10,25 @@
 </head>
 
 <body>
-    <div class="hero-section">
+    <div class="section">
         <nav>
             <div class="title">.Text</div>
             <ul>
                 <li><a href="#">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#project-section">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-
+                <li><a href="#">About</a></li>
+                <li><a href="#">Porjects</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
             <div class="menu">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span></span><span></span><span></span>
             </div>
         </nav>
         <div class="container">
             <div>
-                <h1>Hello, <span></span></h1>
-                <h1>My Name Is <span></span> </h1>
-                <h1>IRON MAN <span></span></h1>
-                <button class="cta">Portfolio</button=>
+                <h1>Hello,<span></span></h1>
+                <h1>My Name Is<span></span></h1>
+                <h1>IRON MAN<span></span></h1>
+                <button class="btn">Portfolio</button>
             </div>
         </div>
     </div>
