--- a/Project-7-card-hover-Effect/index.html
+++ b/Project-7-card-hover-Effect/index.html
@@ -15,24 +15,24 @@
             <img src="ironman.jpg" alt="">
             <div class="content">
                 <h1>IRON MAN</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla ducimus iusto recusandae repellat non.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita possimus maxime in nulla? Id, fuga.</p>
             </div>
         </div>
         <div class="box">
             <img src="thor.jpg" alt="">
             <div class="content">
-                <h1>THOR - ODIN'S SON</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla ducimus iusto recusandae repellat non.</p>
+                <h1>THOR - ODIN"S SON</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita possimus maxime in nulla? Id, fuga.</p>
             </div>
         </div>
         <div class="box">
             <img src="spider.jpg" alt="">
             <div class="content">
                 <h1>SPIDER MAN</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla ducimus iusto recusandae repellat non.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita possimus maxime in nulla? Id, fuga.</p>
             </div>
         </div>
     </div>
 </body>
 
-</html>
+</html>     
