--- a/Project-9-stunning/index.html
+++ b/Project-9-stunning/index.html
@@ -28,11 +28,8 @@
           </span>
           .com
         </h3>
-        <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Dolore, quasi quod! Sequi, eos! Illo optio
-          aliquam dicta,exercitationem nemo<br> nostrum suscipit impedit veniam minus placeat.</p>
-        <a href="#" class="btn flex">
-          FIRST <span> LOGIN</span>
-        </a>
+        <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Dolore, quasi quod! Sequi, eos! Illo optio aliquam dicta,exercitationem nemo<br> nostrum suscipit impedit veniam minus placeat.</p>
+        <a href="#" class="btn flex">FIRST <span> LOGIN</span></a>
       </div>
     </div>
   </div>
