--- a/Project-12-text-trasiton/index.html
+++ b/Project-12-text-trasiton/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <p>H</p>
-        <p>E</p>
-        <p>L</p>
-        <p>L</p>
-        <p>O</p>
+    <div class="text">
+        <P>I</P>
+        <P>❤️</P>
+        <p>I</p>
+        <p>N</p>
+        <p>D</p>
+        <p>I</p>
+        <p>A</p>
       </div>
+
 </body>
 </html>
